deployments/gateway/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: default
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - allowedRoutes:
      kinds:
        - group: gateway.networking.k8s.io
          kind: TCPRoute
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
