deployments/gateway/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    gateway: echo
  name: nginx
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      name: envoy-gateway
      kind: Gateway
      namespace: default
  hostnames:
  - proxy.devops.com
  rules:
    - matches:
        - headers:
            - name: x-color
              value: red
            - name: x-chain
              value: v1-v2-v3
      forwardTo:
        - serviceName: demo-service-v1
          port: 8080
    - matches:
        - headers:
            - name: x-color
              value: red
            - name: x-chain
              value: v1-v2-v3
      forwardTo:
        - serviceName: demo-service-v2
          port: 8080
    - matches:
        - headers:
            - name: x-color
              value: red
            - name: x-chain
              value: v1-v2-v3
      forwardTo:
        - serviceName: demo-service-v3
          port: 8080
